# Lessons_16

./: .gitignore  FILE_FOR_TRY.py  pyproject.toml
Lessons_16_1/: main_01.py  main_02.py  raise.py  try_except.py
Lessons_16_2/: SOLID_0_Principles.py  SOLID_1_Single_Responsibility.py  SOLID_2_Open_Closed.py  SOLID_3_Liskov_Substitution.py  SOLID_4_Interface_Segregation.py  SOLID_5_Dependency_Inversion.py  SOLID_Principles.py
